tests/invalid/tuple_non_literal_index/main.py
def run_case() -> None:
    t: tuple[int, str] = (1, "x")

    i: int = 1

    print(t[i])

if __name__ == "__main__":
    run_case()
